--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:id="@+id/avatar"
         android:layout_width="@dimen/imageSize"
         android:layout_height="@dimen/imageSize"
-        android:layout_marginTop="@dimen/offset"
+        android:layout_marginBottom="@dimen/offset"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_netology"
@@ -149,7 +149,6 @@
         android:text="500K"
         app:layout_constraintBottom_toBottomOf="@+id/countViews"
         app:layout_constraintEnd_toEndOf="parent"
-
         app:layout_constraintTop_toBottomOf="@id/barrierAfterContent" />
 
 
