--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -147,10 +147,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/offset"
-        android:text="500K"
         app:layout_constraintBottom_toBottomOf="@+id/countViews"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/barrierAfterContent" />
+        app:layout_constraintTop_toBottomOf="@id/barrierAfterContent"
+        tools:text="@string/textCountViews" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
